--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "morgan": "^1.9.1",
+    "three-orbitcontrols": "^2.101.1",
     "three-transformcontrols": "^0.78.1"
   },
   "devDependencies": {
