--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "morgan": "^1.9.1",
     "three-orbitcontrols": "^2.101.1",
     "three-transformcontrols": "^0.78.1"
