--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "morgan": "^1.9.1",
+    "redux": "^4.0.1",
     "three-orbitcontrols": "^2.101.1",
     "three-transformcontrols": "^0.78.1"
   },
