--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
+    "react-router": "^3.2.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "redux": "^4.0.1",
     "redux-routing": "^0.3.3",
     "three-orbitcontrols": "^2.101.1",
